--- a/package.json
+++ b/package.json
@@ -5,18 +5,19 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "lint": "eslint src --ext .ts --fix"
+    "lint": "eslint src --ext .ts --fix",
+    "prisma": "npx prisma generate --schema prisma/schema.sqlite.prisma & npx prisma generate --schema prisma/schema.mongodb.prisma"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
-    "@types/node": "^20.4.4",
+    "@types/node": "^22.13.1",
     "eslint": "^8.45.0",
-    "prisma": "^5.2.0",
-    "tsx": "^3.12.7",
-    "typescript": "^5.1.6"
+    "prisma": "^6.3.1",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.3"
   },
   "dependencies": {
     "@fastify/cors": "^8.3.0",
